deploy/meetingserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: meetingserver
  name: meetingserver
