deploy/meetingserver/deployment.yaml
# Deployment for meeting service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: meeting-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meeting-server
      component: web-server
  template:
    metadata:
      labels:
        app: meeting-server
        component: web-server
    spec:
      containers:
        - name: meeting-server
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-meeting-server:faca5803ef5f24b3a98b515be4e33f68fc57b435
          volumeMounts:
            - mountPath: /work/app-meeting-server/meetings/migrations
              name: meeting-data-volume
            - mountPath: /work/app-meeting-server/share
              name: meeting-share-volume
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          command:
            - /bin/sh
            - -c
            - |
              strip -R .note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5.11.3
              python manage.py collectstatic
              python manage.py makemigrations
              python manage.py migrate
              python manage.py sync_sigs
              exec uwsgi --ini /work/app-meeting-server/deploy/production/uwsgi.ini
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:              #就绪探针
            initialDelaySeconds: 20    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 10         #超时时间设置
            failureThreshold: 5        #探测失败的重试次数
            tcpSocket:
              port: 8080
          livenessProbe:               #存活探针
            initialDelaySeconds: 60    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 5          #超时时间设置
            failureThreshold: 3        #探测失败的重试次数
            tcpSocket:
              port: 8080
      volumes:
        - name: meeting-data-volume
          persistentVolumeClaim:
            claimName: meeting-data-volume
        - name: meeting-share-volume
          persistentVolumeClaim:
            claimName: meetingserver-share-volume
